[tool.poetry]
name = "post-tracker-bot"
version = "0.1.0"
description = ""
authors = ["Amir Aref <amiraref808@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
post-tracker = {git = "https://github.com/AmirAref/post-tracker"}
pydantic-settings = "^2.3.4"
python-telegram-bot = {extras = ["socks"], version = "^21.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
