[project]
name = "post-tracker-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Amir Aref", email = "amiraref808@gmail.com" }
]
dependencies = [
    "colorlog>=6.8.2",
    "python-telegram-bot[socks]>=21.4",
    "pydantic-settings>=2.3.4",
    "post-tracker @ git+https://github.com/AmirAref/post-tracker",
]
readme = "README.md"
requires-python = ">=3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.ruff]
target-version = "py311"
